@@ -429,6 +429,7 @@ void initChangeTables(void)
 	set_sc( GC_CLOAKINGEXCEED    , SC_CLOAKINGEXCEED  , SI_CLOAKINGEXCEED     , SCB_SPEED );
 	set_sc( GC_HALLUCINATIONWALK , SC_HALLUCINATIONWALK , SI_HALLUCINATIONWALK , SCB_FLEE );
 
+	set_sc( AB_ADORAMUS          , SC_ADORAMUS          , SI_ADORAMUS          , SCB_AGI|SCB_SPEED );
 	add_sc( AB_CLEMENTIA         , SC_BLESSING );
 	add_sc( AB_CANTO             , SC_INCREASEAGI );
 	add_sc( AB_PRAEFATIO         , SC_KYRIE );
@@ -3546,6 +3547,8 @@ static unsigned short status_calc_agi(struct block_list *bl, struct status_chang
 		agi += ((sc->data[SC_MARIONETTE2]->val3)>>8)&0xFF;
 	if(sc->data[SC_SPIRIT] && sc->data[SC_SPIRIT]->val2 == SL_HIGH && agi < 50)
 		agi = 50;
+	if(sc->data[SC_ADORAMUS])
+		agi -= sc->data[SC_ADORAMUS]->val2;
 	if(sc->data[SC_HARMONIZE])
 		agi += sc->data[SC_HARMONIZE]->val2;
 	if(sc->data[SC_DROCERA_HERB_STEAMED])
@@ -4182,7 +4185,7 @@ static unsigned short status_calc_speed(struct block_list *bl, struct status_cha
 				if( sd && sc->data[SC_DANCING] )
 					val = max( val, 500 - (40 + 10 * (sc->data[SC_SPIRIT] && sc->data[SC_SPIRIT]->val2 == SL_BARDDANCER)) * pc_checkskill(sd,(sd->status.sex?BA_MUSICALLESSON:DC_DANCINGLESSON)) );
 
-				if( sc->data[SC_DECREASEAGI] )
+				if( sc->data[SC_DECREASEAGI] || sc->data[SC_ADORAMUS] )
 					val = max( val, 25 );
 				if( sc->data[SC_QUAGMIRE] )
 					val = max( val, 50 );
@@ -5069,6 +5072,7 @@ int status_get_sc_def(struct block_list *bl, enum sc_type type, int rate, int ti
 	case SC_SUITON:
 	case SC_SECRAMENT:
 	case SC_SWINGDANCE:
+	case SC_ADORAMUS:
 		return 0;
 	}
 	
@@ -5089,6 +5093,7 @@ int status_get_sc_def(struct block_list *bl, enum sc_type type, int rate, int ti
 		sc_def = 5 * status->int_ /10;
 		break;
 	case SC_DECREASEAGI:
+	case SC_ADORAMUS:
 		if (sd) tick>>=1; //Half duration for players.
 	case SC_STONE:
 	case SC_FREEZE:
@@ -5343,7 +5348,8 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		if(sd && !pc_check_weapontype(sd,skill_get_weapontype(BS_ADRENALINE)))
 			return 0;
 		if (sc->data[SC_QUAGMIRE] ||
-			sc->data[SC_DECREASEAGI]
+			sc->data[SC_DECREASEAGI] ||
+			sc->data[SC_ADORAMUS]
 		)
 			return 0;
 	break;
@@ -5351,14 +5357,15 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		if(sd && !pc_check_weapontype(sd,skill_get_weapontype(BS_ADRENALINE2)))
 			return 0;
 		if (sc->data[SC_QUAGMIRE] ||
-			sc->data[SC_DECREASEAGI]
+			sc->data[SC_DECREASEAGI] ||
+			sc->data[SC_ADORAMUS]
 		)
 			return 0;
 	break;
 	case SC_ONEHAND:
 	case SC_MERC_QUICKEN:
 	case SC_TWOHANDQUICKEN:
-		if(sc->data[SC_DECREASEAGI])
+		if(sc->data[SC_DECREASEAGI] || sc->data[SC_ADORAMUS])
 			return 0;
 	case SC_CONCENTRATE:
 	case SC_INCREASEAGI:
@@ -5522,6 +5529,7 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 			case SC_FREEZING:
 			case SC_BURNING:// Place here until we have info about its behavior on Boss-monsters. [pakpil]
 			case SC_MARSHOFABYSS:
+			case SC_ADORAMUS:
 				return 0;
 		}
 	}
@@ -5542,6 +5550,7 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 	case SC_INCREASEAGI:
 		status_change_end(bl,SC_DECREASEAGI,-1);
 		status_change_end(bl,SC_ACCELERATION,-1);
+		status_change_end(bl,SC_ADORAMUS,-1);
 		break;
 	case SC_QUAGMIRE:
 		status_change_end(bl,SC_CONCENTRATE,-1);
@@ -5549,6 +5558,7 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		status_change_end(bl,SC_WINDWALK,-1);
 		//Also blocks the ones below...
 	case SC_DECREASEAGI:
+	case SC_ADORAMUS:
 		status_change_end(bl,SC_CARTBOOST,-1);
 		//Also blocks the ones below...
 	case SC_DONTFORGETME:
@@ -5607,9 +5617,10 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		status_change_end(bl,SC_ASSUMPTIO,-1);
 		break;
 	case SC_CARTBOOST:
-		if(sc->data[SC_DECREASEAGI])
+		if(sc->data[SC_DECREASEAGI] && sc->data[SC_ADORAMUS])
 		{	//Cancel Decrease Agi, but take no further effect [Skotlex]
 			status_change_end(bl,SC_DECREASEAGI,-1);
+			status_change_end(bl,SC_ADORAMUS,-1);
 			return 0;
 		}
 		break;
@@ -5784,7 +5795,10 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 	{
 		case SC_DECREASEAGI:
 		case SC_INCREASEAGI:
+		case SC_ADORAMUS:
 			val2 = 2 + val1; //Agi change
+			if( type == SC_ADORAMUS )
+				sc_start(bl,SC_BLIND,100,val1,skill_get_time(status_sc2skill(type),val1));
 			break;
 		case SC_ENDURE:
 			val2 = 7; // Hit-count [Celest]
@@ -7717,6 +7731,9 @@ int status_change_end(struct block_list* bl, enum sc_type type, int tid)
 				clif_standing(bl);
 			}
 			break;
+		case SC_ADORAMUS:
+			status_change_end(bl, SC_BLIND, -1);
+			break;
 		}
 
 	opt_flag = 1;
@@ -8782,6 +8799,7 @@ int status_change_clear_buffs (struct block_list* bl, int type)
 			case SC_STRIPARMOR:
 			case SC_STRIPHELM:
 			case SC_BITE:
+			case SC_ADORAMUS:
 				if (!(type&2))
 					continue;
 				break;
